--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "QUEEN_ELISA-MD",
-    "description": "Queen Elisa Whatsapp Bot By ELISACODERS. You Must Fill This form for deploy bot !",
+    "name": "Lizzy BOT",
+    "description": "You Must Fill This form for deploy bot !",
     "repository": "https://github.com/darkmakerofc/QueenElisa",
     "logo": "https://raw.githubusercontent.com/darkmakerofc/QueenElisa/4.0.0-V/repo-data/repo-logo.jpg",
     "keywords": [
